methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:44: error: value yellow is not a member of java.awt.Color
  setBrushColor(c.yellow);
                  ^